pkl-core/src/test/files/LanguageSnippetTests/input/errors/duplicateTypeParameter.pkl
typealias MyType<Elem, Elem> = List<Elem>